--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:js": "browserify ./src/player.js -s TermPlayer -o ./dist/ttyplay.js",
-    "min:js": "uglifyjs ./dist/ttyplay.js -m -c -o ./dist/ttyplay.min.js",
-    "build:css": "cleancss ./src/player.css -o ./dist/ttyplay.css",
-    "build": "npm run build:js && npm run min:js && npm run build:css"
+    "start": "webpack-dev-server",
+    "build": "webpack && webpack -p"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2015-loose": "^7.0.0",
     "browserify": "^13.1.0",
     "clean-css": "^3.4.19",
-    "uglify-js": "^2.7.3"
+    "css-loader": "^0.24.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
+    "uglify-js": "^2.7.3",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.0"
   }
 }
