--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-es2015": "^6.14.0",
     "browserify": "^13.1.0",
     "clean-css": "^3.4.19",
     "css-loader": "^0.24.0",
